feature: Add filters to ListUsers usecase